examples/invalid/semanticErr/switch/undeclaredSelector.wacc
# switch selector is not declared

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  switch (missing)
    case 1: println "one"
    default: println "other"
  end
end
